sumo/tests/netconvert/errors/errors/broken_edge/edge#fromnode__empty1/errors.netconvert
Error: Neither the name nor the position of the from-node is given for edge '1'.
Quitting (on error).
